# vapi-tool-for-ange

./: .gitignore  .pypirc.example  CHANGELOG.md  CLI_DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  ange-vicky  assinta.json  booking.md  create-tool.md  force-asssistant.md  functions.yaml  meta-temple.md  property.md  publish.py  pyproject.toml  real-estate-brocker.md  real-estate-squad-complete-tutorial.md  receptionist_deployment.py  sample.txt  setup.py  shared-tool-spec.md  squad.json  squad.model.json  todo.txt  triage.md  update_payload.json
assistants/billing_assistant/: assistant.yaml
assistants/booking_assistant_basic/: assistant.yaml
assistants/booking_assistant_demo/: assistant.yaml
assistants/booking_assistant_pa/: assistant.yaml
assistants/bs-re-triage-manager/: assistant.yaml
assistants/example_assistant/: assistant.yaml
assistants/info_assistant/: assistant.yaml
assistants/info_assistant_demo/: assistant.yaml
assistants/info_assistant_pa/: assistant.yaml
assistants/lead_qualifier/: assistant.yaml
assistants/manager-ange/: assistant.yaml
assistants/property_info/: assistant.yaml
assistants/re-triage-manager/: assistant.yaml
assistants/real-estate-booking/: assistant.yaml
assistants/real-estate-info/: assistant.yaml  system_prompt.md
assistants/real-estate-triage/: assistant.yaml  system_prompt.md
assistants/regression-test-1/: assistant.yaml
assistants/regression-test-2/: assistant.yaml
assistants/regression-test-3/: assistant.yaml
assistants/regression-test-4/: assistant.yaml
assistants/regression-test-5/: assistant.yaml
assistants/regression-test-6/: assistant.yaml
assistants/restored_test_squadscheduler_bot/: assistant.yaml
assistants/scheduler-ange/: assistant.yaml  update.specs.yaml
assistants/scheduler_bot/: assistant.yaml
assistants/scheduling_assistant/: assistant.yaml
assistants/test-analysis-assistant/: assistant.yaml
assistants/test-combined/: assistant.yaml
assistants/test-contextual-idle/: assistant.yaml
assistants/test-edge-case/: assistant.yaml
assistants/test-endcall-messages/: assistant.yaml
assistants/test-endcall-multiple/: assistant.yaml
assistants/test-endcall-none/: assistant.yaml
backups/: backup_20250916_182931_07c1e6bf.json  backup_20250916_183102_33fe9026.json  backup_20250916_183143_490e5152.json  backup_20250916_183225_909420e1.json  squad_backup_20250916_184511_13338592.json  squad_backup_20250916_184715_25923705.json
docs/: CORRECTED_IMPLEMENTATION_SUMMARY.md  TRANSFER_WITH_CONTEXT_SUMMARY.md  VERIFICATION_CHECKLIST.md  analysis-configuration-guide.md  background-speech-denoising-guide.md  cross-platform-installation-plan.md  idle-messages-guide.md  n8n-set-customer-context-webhook.md  n8n-transfer-with-context-webhook.md  pronunciation-dictionaries-guide.md  pypi-publishing-guide.md  squad-parameter-updates.md  squad_template_creator.md  tool-messages.md  transfers-configuration-guide.md  vapi-builtin-tools-guide.md
tests/: test_bootstrap_manager.py  test_dependency_resolver.py  test_shared_tools.py  test_squad_template_creator.py  test_template_manager.py  test_tool_template_manager.py
vapi_manager/: __version__.py
(+269 files in other folders)
