[tool.poetry]
name = "vapi-tool-for-ange"
version = "0.1.0"
description = "VAPI Assistant and Squad Management Tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vapi_manager"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic-settings = "^2.4.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.poetry.scripts]
vapi-manager = "vapi_manager.cli.simple_cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
